Added more actions

--- a/todo.html
+++ b/todo.html
@@ -48,10 +48,12 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Take out washing</label></li>
-<li><label><input type="checkbox" />Bring up clean clothes</label></li>
-<li><label><input type="checkbox" />Read for minimum 20
-minutes</label></li>
+<li><label><input type="checkbox" />Consider 50,000 feet (life), 40,000
+feet (three/five year plan), 30,000 feet (one/two year plan), 20,2000
+feet (My hats), 10,000 feet (Current projects) and Runway
+(actions)</label></li>
+<li><label><input type="checkbox" />Make an about me page with my life
+vision and values</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -61,6 +63,12 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" checked="" />Take out
+washing</label></li>
+<li><label><input type="checkbox" checked="" />Bring up clean
+clothes</label></li>
+<li><label><input type="checkbox" checked="" />Read for minimum 20
+minutes</label></li>
 <li><label><input type="checkbox" />Vacuum room</label></li>
 <li><label><input type="checkbox" />Recreate my old games with new
 technology</label></li>
@@ -180,8 +188,15 @@ href="https://veeenu.github.io/blog/implementing-skeletal-animation/">https://ve
 <li>How to Start Learning Computer Graphics Programming <a
 href="https://erkaman.github.io/posts/beginner_computer_graphics.html">https://erkaman.github.io/posts/beginner_computer_graphics.html</a></li>
 </ul>
-<h1 id="one-day">One day</h1>
-<h6 id="all-dreams-to-make-real">All dreams to make real</h6>
+<h1 id="dreams">Dreams</h1>
+<h6 id="goals-i-might-get-around-to-some-day">Goals I might get around
+to some day</h6>
+<ul>
+<li>Create and OS for creative people</li>
+<li>Create the best games in the world</li>
+<li>Save the world by becoming Willy Wonka</li>
+<li>Get an amazing girlfriend and loving relationships</li>
+</ul>
 
         </div>
         <div class="six columns portrait" style="margin-top: 15%">
