Added another commitment

--- a/todo.html
+++ b/todo.html
@@ -69,6 +69,8 @@ washing</label></li>
 clothes</label></li>
 <li><label><input type="checkbox" checked="" />Read for minimum 20
 minutes</label></li>
+<li><label><input type="checkbox" />Make Project Support
+Materials</label></li>
 <li><label><input type="checkbox" />Vacuum room</label></li>
 <li><label><input type="checkbox" />Recreate my old games with new
 technology</label></li>
@@ -86,8 +88,6 @@ Mathematics I for the computer</label></li>
 library</label></li>
 <li><label><input type="checkbox" />Reference all bookmarks and delete
 them</label></li>
-<li><label><input type="checkbox" />Make Project Support
-Materials</label></li>
 <li><label><input type="checkbox" />List all active courses I want to
 complete</label></li>
 <li><label><input type="checkbox" />Make mazes</label></li>
@@ -143,6 +143,8 @@ href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></
 <li><label><input type="checkbox" />Help Philip excel at R1</label></li>
 <li><label><input type="checkbox" />Help Ulrik excel at 10. grade
 Mathematics</label></li>
+<li><label><input type="checkbox" />Do game jam in January with
+Rudi</label></li>
 </ul>
 <h1 id="project-reference-material">Project reference material</h1>
 <h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a
