Made new action

--- a/todo.html
+++ b/todo.html
@@ -54,6 +54,8 @@ feet (My hats), 10,000 feet (Current projects) and Runway
 (actions)</label></li>
 <li><label><input type="checkbox" />Make an about me page with my life
 vision and values</label></li>
+<li><label><input type="checkbox" />Take all chrome tags and make
+actions/references out of them</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -143,7 +145,7 @@ href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></
 <li><label><input type="checkbox" />Help Philip excel at R1</label></li>
 <li><label><input type="checkbox" />Help Ulrik excel at 10. grade
 Mathematics</label></li>
-<li><label><input type="checkbox" />Do game jam in January with
+<li><label><input type="checkbox" />Do global game jam in January with
 Rudi</label></li>
 </ul>
 <h1 id="project-reference-material">Project reference material</h1>
