--- a/todo.html
+++ b/todo.html
@@ -125,6 +125,10 @@ camera</label></li>
 <h6
 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered
 actions. Waiting for the right time or on other people</h6>
+<ul class="task-list">
+<li><label><input type="checkbox" />Review Getting Things Done in three
+months -&gt; january-2023</label></li>
+</ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
