Checked off some items, added math weeklies to todo list

--- a/todo.html
+++ b/todo.html
@@ -56,6 +56,10 @@ feet (My hats), 10,000 feet (Current projects) and Runway
 vision and values</label></li>
 <li><label><input type="checkbox" />Take all chrome tags and make
 actions/references out of them</label></li>
+<li><label><input type="checkbox" />Do weekly mathematics
+42</label></li>
+<li><label><input type="checkbox" />Do weekly mathematics
+43</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -71,6 +75,10 @@ washing</label></li>
 clothes</label></li>
 <li><label><input type="checkbox" checked="" />Read for minimum 20
 minutes</label></li>
+<li><label><input type="checkbox" />Go for a long walk early
+#health</label></li>
+<li><label><input type="checkbox" />Read a book 20 minutes
+#recreation</label></li>
 <li><label><input type="checkbox" />Make Project Support
 Materials</label></li>
 <li><label><input type="checkbox" />Vacuum room</label></li>
@@ -94,12 +102,9 @@ them</label></li>
 complete</label></li>
 <li><label><input type="checkbox" />Make mazes</label></li>
 <li><label><input type="checkbox" />Recreate fsn</label></li>
-<li><label><input type="checkbox" />Buy new trousers</label></li>
-<li><label><input type="checkbox" />Shave beard</label></li>
-<li><label><input type="checkbox" />Go for a long walk early
-#health</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
-#recreation</label></li>
+<li><label><input type="checkbox" checked="" />Buy new
+trousers</label></li>
+<li><label><input type="checkbox" checked="" />Shave beard</label></li>
 <li><label><input type="checkbox" />Make carrot man as practice
 #intro-3d</label></li>
 <li><label><input type="checkbox" />Read a book 20 minutes
