Added more items and ulrik checklist

--- a/todo.html
+++ b/todo.html
@@ -48,162 +48,156 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Consider 50,000 feet (life), 40,000
-feet (three/five year plan), 30,000 feet (one/two year plan), 20,2000
-feet (My hats), 10,000 feet (Current projects) and Runway
-(actions)</label></li>
-<li><label><input type="checkbox" />Make an about me page with my life
-vision and values</label></li>
-<li><label><input type="checkbox" />Take all chrome tags and make
-actions/references out of them</label></li>
-<li><label><input type="checkbox" />Do weekly mathematics
-42</label></li>
-<li><label><input type="checkbox" />Do weekly mathematics
-43</label></li>
+<li><input type="checkbox" disabled="" />
+Consider 50,000 feet (life), 40,000 feet (three/five year plan), 30,000 feet (one/two year plan), 20,2000 feet (My hats), 10,000 feet (Current projects) and Runway (actions)</li>
+<li><input type="checkbox" disabled="" />
+Make an about me page with my life vision and values</li>
+<li><input type="checkbox" disabled="" />
+Take all chrome tags and make actions/references out of them</li>
+<li><input type="checkbox" disabled="" />
+Do weekly mathematics 42</li>
+<li><input type="checkbox" disabled="" />
+Do weekly mathematics 43</li>
+<li><input type="checkbox" disabled="" />
+Do weekly mathematics 44</li>
 </ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
-#atComputer #errands #office #atHome #agendas #read</h6>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
-<h6
-id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
-time. Revisit. Flag what needs to be done today. The battle is to
-remember what to do!</h6>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" checked="" />Take out
-washing</label></li>
-<li><label><input type="checkbox" checked="" />Bring up clean
-clothes</label></li>
-<li><label><input type="checkbox" checked="" />Read for minimum 20
-minutes</label></li>
-<li><label><input type="checkbox" />Go for a long walk early
-#health</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
-#recreation</label></li>
-<li><label><input type="checkbox" />Make Project Support
-Materials</label></li>
-<li><label><input type="checkbox" />Vacuum room</label></li>
-<li><label><input type="checkbox" />Recreate my old games with new
-technology</label></li>
-<li><label><input type="checkbox" />Recreate the games found on
-NextStep</label></li>
-<li><label><input type="checkbox" />Recreate the games found as examples
-for raylib</label></li>
-<li><label><input type="checkbox" />Reconsider UML (made in
-nomnoml)</label></li>
-<li><label><input type="checkbox" />Implement numerical methods for
-Mathematics I for the computer</label></li>
-<li><label><input type="checkbox" checked="" />Do compulsory 3 in 3D
-#intro-3d</label></li>
-<li><label><input type="checkbox" />Reference all books in private
-library</label></li>
-<li><label><input type="checkbox" />Reference all bookmarks and delete
-them</label></li>
-<li><label><input type="checkbox" />List all active courses I want to
-complete</label></li>
-<li><label><input type="checkbox" />Make mazes</label></li>
-<li><label><input type="checkbox" />Recreate fsn</label></li>
-<li><label><input type="checkbox" checked="" />Buy new
-trousers</label></li>
-<li><label><input type="checkbox" checked="" />Shave beard</label></li>
-<li><label><input type="checkbox" />Make carrot man as practice
-#intro-3d</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
-#recreation</label></li>
-<li><label><input type="checkbox" />Write script to do Modern Graphics
-Programming files (currently on tut05 out of tut18), make it as an
-append and prepend comment option in solid #programming</label></li>
-<li><label><input type="checkbox" />Fix delete cube bug
-#programming</label></li>
-<li><label><input type="checkbox" />Implement PEMDAS, use a tree data
-structure #programming</label></li>
-<li><label><input type="checkbox" />Implement polynomial devision
-#programming</label></li>
-<li><label><input type="checkbox" />Learn to play green sleeves on
-ukulele</label></li>
-<li><label><input type="checkbox" />Learn to play simple tunes on the
-ocarina</label></li>
-<li><label><input type="checkbox" />Find a project for the
-camera</label></li>
-<li><label><input type="checkbox" />Look at R1 exams</label></li>
+<li><input type="checkbox" disabled="" checked="" />
+Take out washing</li>
+<li><input type="checkbox" disabled="" checked="" />
+Bring up clean clothes</li>
+<li><input type="checkbox" disabled="" checked="" />
+Read for minimum 20 minutes</li>
+<li><input type="checkbox" disabled="" />
+Go for a long walk early #health</li>
+<li><input type="checkbox" disabled="" />
+Read a book 20 minutes #recreation</li>
+<li><input type="checkbox" disabled="" />
+Make Project Support Materials</li>
+<li><input type="checkbox" disabled="" />
+Vacuum room</li>
+<li><input type="checkbox" disabled="" />
+Recreate my old games with new technology</li>
+<li><input type="checkbox" disabled="" />
+Recreate the games found on NextStep</li>
+<li><input type="checkbox" disabled="" />
+Recreate the games found as examples for raylib</li>
+<li><input type="checkbox" disabled="" />
+Reconsider UML (made in nomnoml)</li>
+<li><input type="checkbox" disabled="" />
+Implement numerical methods for Mathematics I for the computer</li>
+<li><input type="checkbox" disabled="" checked="" />
+Do compulsory 3 in 3D #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Reference all books in private library</li>
+<li><input type="checkbox" disabled="" />
+Reference all bookmarks and delete them</li>
+<li><input type="checkbox" disabled="" />
+List all active courses I want to complete</li>
+<li><input type="checkbox" disabled="" />
+Make mazes</li>
+<li><input type="checkbox" disabled="" />
+Recreate fsn</li>
+<li><input type="checkbox" disabled="" checked="" />
+Buy new trousers</li>
+<li><input type="checkbox" disabled="" checked="" />
+Shave beard</li>
+<li><input type="checkbox" disabled="" />
+Make carrot man as practice #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Read a book 20 minutes #recreation</li>
+<li><input type="checkbox" disabled="" />
+Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
+<li><input type="checkbox" disabled="" />
+Fix delete cube bug #programming</li>
+<li><input type="checkbox" disabled="" />
+Implement PEMDAS, use a tree data structure #programming</li>
+<li><input type="checkbox" disabled="" />
+Implement polynomial devision #programming</li>
+<li><input type="checkbox" disabled="" />
+Learn to play green sleeves on ukulele</li>
+<li><input type="checkbox" disabled="" />
+Learn to play simple tunes on the ocarina</li>
+<li><input type="checkbox" disabled="" />
+Find a project for the camera</li>
+<li><input type="checkbox" disabled="" />
+Look at R1 exams</li>
 </ul>
 <h1 id="wait">Wait</h1>
-<h6
-id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered
-actions. Waiting for the right time or on other people</h6>
+<h6 id="deffered-actions.-waiting-for-the-right-time-or-on-other-people">Deffered actions. Waiting for the right time or on other people</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Review Getting Things Done in three
-months -&gt; january-2023</label></li>
+<li><input type="checkbox" disabled="" />
+Review Getting Things Done in three months -&gt; january-2023</li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Modern Graphics Programming files
-#programming</label></li>
-<li><label><input type="checkbox" />Complete Piano4All</label></li>
-<li><label><input type="checkbox" />Complete Blender Character Creator
-v2.0 for Video Games Design Course</label></li>
-<li><label><input type="checkbox" />Complete Blender Creator 3: Learn 3D
-Modelling for Beginners</label></li>
-<li><label><input type="checkbox" />Exam Practice Mathematics
-#mathematics</label></li>
-<li><label><input type="checkbox" />Complete Semester 1 Game School <a
-href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></li>
-<li><label><input type="checkbox" />Do drawabox.com course</label></li>
-<li><label><input type="checkbox" />Learn to make music <a
-href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></label></li>
-<li><label><input type="checkbox" />Help Philip excel at R1</label></li>
-<li><label><input type="checkbox" />Help Ulrik excel at 10. grade
-Mathematics</label></li>
-<li><label><input type="checkbox" />Do global game jam in January with
-Rudi</label></li>
+<li><input type="checkbox" disabled="" />
+Modern Graphics Programming files #programming</li>
+<li><input type="checkbox" disabled="" />
+Complete Piano4All</li>
+<li><input type="checkbox" disabled="" />
+Complete Blender Character Creator v2.0 for Video Games Design Course</li>
+<li><input type="checkbox" disabled="" />
+Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
+<li><input type="checkbox" disabled="" />
+Exam Practice Mathematics #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Complete Semester 1 Game School <a href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></li>
+<li><input type="checkbox" disabled="" />
+Do drawabox.com course</li>
+<li><input type="checkbox" disabled="" />
+Learn to make music <a href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></li>
+<li><input type="checkbox" disabled="" />
+Help Philip excel at R1</li>
+<li><input type="checkbox" disabled="" />
+Help Ulrik excel at 10. grade Mathematics [x] [ ] [ ] [ ] [ ]</li>
+<li><input type="checkbox" disabled="" />
+Do global game jam in January with Rudi</li>
 </ul>
 <h1 id="project-reference-material">Project reference material</h1>
-<h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a
-website for each project?</h6>
+<h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a website for each project?</h6>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
-<li><label><input type="checkbox" checked="" />Compulsory 1 -&gt;
-1-september-2023 #programming-I</label></li>
-<li><label><input type="checkbox" checked="" />Oblig 1 -&gt;
-18-september-2023 #mathematics-I</label></li>
-<li><label><input type="checkbox" checked="" />Compulsory 1 -&gt;
-22-september-2023 #intro-3d</label></li>
-<li><label><input type="checkbox" checked="" />Compulsory 2 -&gt;
-29-september-2023 #programming-I</label></li>
-<li><label><input type="checkbox" checked="" />Compulsory 2 -&gt;
-20-october-2023 #intro-3d</label></li>
-<li><label><input type="checkbox" checked="" />Oblig 2 -&gt;
-23-october-2023 #mathematics-I</label></li>
-<li><label><input type="checkbox" checked="" />Compulsory 3 -&gt;
-27-october-2023 #programming-I</label></li>
-<li><label><input type="checkbox" checked="" />Compulsory 3 -&gt;
-3-november-2023 #intro-3d</label></li>
-<li><label><input type="checkbox" />Oblig 3 -&gt; 17-november-2023
-#mathematics-I</label></li>
-<li><label><input type="checkbox" />Folder due -&gt; 1-december-2023
-#intro-3d</label></li>
-<li><label><input type="checkbox" />Written exam -&gt; 6-december-2023
-#programming-I</label></li>
-<li><label><input type="checkbox" />Written exam -&gt; 11-december-2023
-#mathematics-I</label></li>
+<li><input type="checkbox" disabled="" checked="" />
+Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
+<li><input type="checkbox" disabled="" checked="" />
+Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
+<li><input type="checkbox" disabled="" checked="" />
+Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
+<li><input type="checkbox" disabled="" checked="" />
+Compulsory 2 -&gt; 29-september-2023 #programming-I</li>
+<li><input type="checkbox" disabled="" checked="" />
+Compulsory 2 -&gt; 20-october-2023 #intro-3d</li>
+<li><input type="checkbox" disabled="" checked="" />
+Oblig 2 -&gt; 23-october-2023 #mathematics-I</li>
+<li><input type="checkbox" disabled="" checked="" />
+Compulsory 3 -&gt; 27-october-2023 #programming-I</li>
+<li><input type="checkbox" disabled="" checked="" />
+Compulsory 3 -&gt; 3-november-2023 #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Oblig 3 -&gt; 17-november-2023 #mathematics-I</li>
+<li><input type="checkbox" disabled="" />
+Folder due -&gt; 1-december-2023 #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Written exam -&gt; 6-december-2023 #programming-I</li>
+<li><input type="checkbox" disabled="" />
+Written exam -&gt; 11-december-2023 #mathematics-I</li>
 </ul>
-<h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each
-day (triage). Then weekly (big picture)</h6>
+<h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each day (triage). Then weekly (big picture)</h6>
 <h1 id="reference-material">Reference material</h1>
 <h6 id="all-goodies-you-come-across">All goodies you come across</h6>
 <ul>
-<li>Are Modern Macs Really NeXTSTEP in Disguise? <a
-href="https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s">https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s</a></li>
-<li>Julia: A Fresh Approach to Computing <a
-href="https://computationalthinking.mit.edu/Fall23/">https://computationalthinking.mit.edu/Fall23/</a></li>
-<li>Implementing Skeletal Animation <a
-href="https://veeenu.github.io/blog/implementing-skeletal-animation/">https://veeenu.github.io/blog/implementing-skeletal-animation/</a></li>
-<li>How to Start Learning Computer Graphics Programming <a
-href="https://erkaman.github.io/posts/beginner_computer_graphics.html">https://erkaman.github.io/posts/beginner_computer_graphics.html</a></li>
+<li>Are Modern Macs Really NeXTSTEP in Disguise? <a href="https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s">https://www.youtube.com/watch?v=HyitnJQRvu0&amp;t=625s</a></li>
+<li>Julia: A Fresh Approach to Computing <a href="https://computationalthinking.mit.edu/Fall23/">https://computationalthinking.mit.edu/Fall23/</a></li>
+<li>Implementing Skeletal Animation <a href="https://veeenu.github.io/blog/implementing-skeletal-animation/">https://veeenu.github.io/blog/implementing-skeletal-animation/</a></li>
+<li>How to Start Learning Computer Graphics Programming <a href="https://erkaman.github.io/posts/beginner_computer_graphics.html">https://erkaman.github.io/posts/beginner_computer_graphics.html</a></li>
 </ul>
 <h1 id="dreams">Dreams</h1>
-<h6 id="goals-i-might-get-around-to-some-day">Goals I might get around
-to some day</h6>
+<h6 id="goals-i-might-get-around-to-some-day">Goals I might get around to some day</h6>
 <ul>
 <li>Create and OS for creative people</li>
 <li>Create the best games in the world</li>
