--- a/todo.html
+++ b/todo.html
@@ -80,11 +80,11 @@ clothes</label></li>
 minutes</label></li>
 <li><label><input type="checkbox" />Go for a long walk early
 #health</label></li>
-<li><label><input type="checkbox" />Read a book 20 minutes
+<li><label><input type="checkbox" checked="" />Read a book 20 minutes
 #recreation</label></li>
 <li><label><input type="checkbox" />Make Project Support
 Materials</label></li>
-<li><label><input type="checkbox" />Vacuum room</label></li>
+<li><label><input type="checkbox" checked="" />Vacuum room</label></li>
 <li><label><input type="checkbox" />Recreate my old games with new
 technology</label></li>
 <li><label><input type="checkbox" />Recreate the games found on
@@ -139,26 +139,35 @@ months -&gt; january-2023</label></li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
-<ul class="task-list">
-<li><label><input type="checkbox" />Modern Graphics Programming files
-#programming</label></li>
-<li><label><input type="checkbox" />Complete Piano4All</label></li>
-<li><label><input type="checkbox" />Complete Blender Character Creator
-v2.0 for Video Games Design Course</label></li>
-<li><label><input type="checkbox" />Complete Blender Creator 3: Learn 3D
-Modelling for Beginners</label></li>
-<li><label><input type="checkbox" />Exam Practice Mathematics
-#mathematics</label></li>
-<li><label><input type="checkbox" />Complete Semester 1 Game School <a
-href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></li>
-<li><label><input type="checkbox" />Do drawabox.com course</label></li>
-<li><label><input type="checkbox" />Learn to make music <a
-href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></label></li>
-<li><label><input type="checkbox" />Help Philip excel at R1</label></li>
-<li><label><input type="checkbox" />Help Ulrik excel at 10. grade
-Mathematics [x] [ ] [ ] [ ] [ ]</label></li>
-<li><label><input type="checkbox" />Do global game jam in January with
-Rudi</label></li>
+<ul>
+<li><p><label><input type="checkbox" />Modern Graphics Programming files
+#programming</label></p></li>
+<li><p><label><input type="checkbox" />Complete
+Piano4All</label></p></li>
+<li><p><label><input type="checkbox" />Complete Blender Character
+Creator v2.0 for Video Games Design Course</label></p></li>
+<li><p><label><input type="checkbox" />Complete Blender Creator 3: Learn
+3D Modelling for Beginners</label></p></li>
+<li><p><label><input type="checkbox" />Exam Practice Mathematics
+#mathematics</label></p></li>
+<li><p><label><input type="checkbox" />Complete Semester 1 Game School
+<a
+href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></p></li>
+<li><p><label><input type="checkbox" />Do drawabox.com
+course</label></p></li>
+<li><p><label><input type="checkbox" />Learn to make music <a
+href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></label></p></li>
+<li><p><label><input type="checkbox" />Help Philip excel at
+R1</label></p></li>
+<li><p><label><input type="checkbox" />Help Ulrik excel at 10. grade
+Mathematics</label></p></li>
+<li><p>[x]</p></li>
+<li><p>[ ]</p></li>
+<li><p>[ ]</p></li>
+<li><p>[ ]</p></li>
+<li><p>[ ]</p></li>
+<li><p><label><input type="checkbox" />Do global game jam in January
+with Rudi</label></p></li>
 </ul>
 <h1 id="project-reference-material">Project reference material</h1>
 <h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a
@@ -212,6 +221,7 @@ to some day</h6>
 <li>Create the best games in the world</li>
 <li>Save the world by becoming Willy Wonka</li>
 <li>Get an amazing girlfriend and loving relationships</li>
+<li>Create Principia</li>
 </ul>
 
         </div>
