Added mdpi project

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,7 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" />Go to art addicts</label></li>
+<li><label><input type="checkbox" />Read mdpi email</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -166,6 +167,8 @@ Mathematics</label></p></li>
 <li><p>[ ]</p></li>
 <li><p>[ ]</p></li>
 <li><p>[ ]</p></li>
+<li><p><label><input type="checkbox" />Write paper for
+mdpi</label></p></li>
 <li><p><label><input type="checkbox" />Do global game jam in January
 with Rudi</label></p></li>
 </ul>
