--- a/todo.html
+++ b/todo.html
@@ -52,13 +52,13 @@
 Go to art addicts</li>
 <li><input type="checkbox" disabled="" />
 Read mdpi email</li>
-<li><input type="checkbox" disabled="" />
-Do oblig 3 #mathematics</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
+Do oblig 3 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Consider 50,000 feet (life), 40,000 feet (three/five year plan), 30,000 feet (one/two year plan), 20,2000 feet (My hats), 10,000 feet (Current projects) and Runway (actions)</li>
 <li><input type="checkbox" disabled="" />
@@ -191,7 +191,7 @@ Oblig 2 -&gt; 23-october-2023 #mathematics-I</li>
 Compulsory 3 -&gt; 27-october-2023 #programming-I</li>
 <li><input type="checkbox" disabled="" checked="" />
 Compulsory 3 -&gt; 3-november-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Oblig 3 -&gt; 17-november-2023 #mathematics-I</li>
 <li><input type="checkbox" disabled="" />
 Folder due -&gt; 1-december-2023 #intro-3d</li>
@@ -216,6 +216,8 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
 <li>Create the best games in the world</li>
 <li>Save the world by becoming Willy Wonka</li>
 <li>Get an amazing girlfriend and loving relationships</li>
+<li>Make The Castle</li>
+<li>Make Lingua Quest</li>
 <li>Create Principia</li>
 </ul>
 
