--- a/todo.html
+++ b/todo.html
@@ -49,14 +49,18 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Read flex bison book</li>
-<li><input type="checkbox" disabled="" />
-Finish drawabox lesson 1</li>
+Take part in another kaggle competition</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Read flex bison book</li>
+<li><input type="checkbox" disabled="" />
+Finish drawabox lesson 1</li>
+<li><input type="checkbox" disabled="" />
+Play something on keyboard</li>
 <li><input type="checkbox" disabled="" />
 Read mdpi email</li>
 <li><input type="checkbox" disabled="" checked="" />
@@ -212,6 +216,8 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
 <li>Julia: A Fresh Approach to Computing <a href="https://computationalthinking.mit.edu/Fall23/">https://computationalthinking.mit.edu/Fall23/</a></li>
 <li>Implementing Skeletal Animation <a href="https://veeenu.github.io/blog/implementing-skeletal-animation/">https://veeenu.github.io/blog/implementing-skeletal-animation/</a></li>
 <li>How to Start Learning Computer Graphics Programming <a href="https://erkaman.github.io/posts/beginner_computer_graphics.html">https://erkaman.github.io/posts/beginner_computer_graphics.html</a></li>
+<li>Memory Allocation <a href="https://samwho.dev/memory-allocation/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav#malloc-and-free">https://samwho.dev/memory-allocation/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav#malloc-and-free</a></li>
+<li>Finish your projects <a href="https://github.com/readme/guides/finish-your-projects?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav">https://github.com/readme/guides/finish-your-projects?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav</a></li>
 </ul>
 <h1 id="dreams">Dreams</h1>
 <h6 id="goals-i-might-get-around-to-some-day">Goals I might get around to some day</h6>
@@ -223,6 +229,9 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
 <li>Make The Castle</li>
 <li>Make Lingua Quest</li>
 <li>Create Principia</li>
+<li>Write a dx11 renderer</li>
+<li>Write a vulkan renderer</li>
+<li>Write a metal renderer</li>
 </ul>
 
         </div>
