Added a few strange dreams to dreams list

--- a/todo.html
+++ b/todo.html
@@ -247,8 +247,11 @@ to some day</h6>
 <li>Create the best games in the world</li>
 <li>Save the world by becoming Willy Wonka</li>
 <li>Get an amazing girlfriend and loving relationships</li>
+<li>Start the ultimate lifeform project</li>
 <li>Make The Castle</li>
 <li>Make Lingua Quest</li>
+<li>Make Speed Cars</li>
+<li>Make Spring Man</li>
 <li>Create Principia</li>
 <li>Write a dx11 renderer</li>
 <li>Write a vulkan renderer</li>
