Added more items

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,11 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" />Play Alan Wake II</label></li>
+<li><label><input type="checkbox" />Learn more about Fritz
+Haber</label></li>
+<li><label><input type="checkbox" />Consider Linear Algebra Done Right
+<a
+href="https://linear.axler.net">https://linear.axler.net</a></label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
