Added lots of items

--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,32 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Look into making assets for folder #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Texture shroom #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Animate shroom #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Texture fish #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Animate fish #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Make an intro for 3d folder #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Make sound effects for intro #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Consider Abbas mathematics notes #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Do Mock exam 1 #programming</li>
+<li><input type="checkbox" disabled="" />
+Do Mock exam 2 #programming</li>
+<li><input type="checkbox" disabled="" />
+Do closed book exam 2022 #programming</li>
+<li><input type="checkbox" disabled="" />
+Buy superglue</li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -54,19 +80,19 @@
 <li><input type="checkbox" disabled="" checked="" />
 Go to art addicts</li>
 <li><input type="checkbox" disabled="" />
-Do weekly mathematics 42</li>
+Do weekly mathematics 42 #mathematics</li>
 <li><input type="checkbox" disabled="" />
-Do weekly mathematics 43</li>
+Do weekly mathematics 43 #mathematics</li>
 <li><input type="checkbox" disabled="" />
-Do weekly mathematics 44</li>
+Do weekly mathematics 44 #mathematics</li>
 <li><input type="checkbox" disabled="" />
-Do weekly mathematics 45</li>
+Do weekly mathematics 45 #mathematics</li>
 <li><input type="checkbox" disabled="" />
-Hand in first drawabox assignment</li>
+Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d</li>
 <li><input type="checkbox" disabled="" />
-Read a book 20 minutes #recreation</li>
+Hand in first drawabox assignment</li>
 <li><input type="checkbox" disabled="" />
 Consider Linear Algebra Done Right <a href="https://linear.axler.net">https://linear.axler.net</a></li>
 <li><input type="checkbox" disabled="" />
