Finally moved some silly chrome tabs to my list of useful links

--- a/todo.html
+++ b/todo.html
@@ -139,7 +139,7 @@ Reconsider UML (made in nomnoml)</li>
 Implement numerical methods for Mathematics I for the computer</li>
 <li><input type="checkbox" disabled="" />
 Reference all books in private library</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Reference all bookmarks and delete them</li>
 <li><input type="checkbox" disabled="" />
 List all active courses I want to complete</li>
@@ -248,6 +248,10 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
 <li>A Journey Into Shaders <a href="https://www.mayerowitz.io/blog/a-journey-into-shaders">https://www.mayerowitz.io/blog/a-journey-into-shaders</a></li>
 <li>Memory Allocation <a href="https://samwho.dev/memory-allocation/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav#malloc-and-free">https://samwho.dev/memory-allocation/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav#malloc-and-free</a></li>
 <li>Finish your projects <a href="https://github.com/readme/guides/finish-your-projects?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav">https://github.com/readme/guides/finish-your-projects?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=fav</a></li>
+<li>Memory Allocation <a href="https://samwho.dev/memory-allocation">https://samwho.dev/memory-allocation</a></li>
+<li>Finish your projects <a href="https://github.com/readme/guides/finish-your-projects">https://github.com/readme/guides/finish-your-projects</a></li>
+<li>Learning Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">https://paroj.github.io/gltut/</a></li>
+<li>Choosing Ruby On Rails For Your Next Web Development Project <a href="https://www.ideamotive.co/ruby-on-rails/guide">https://www.ideamotive.co/ruby-on-rails/guide</a></li>
 </ul>
 <h1 id="dreams">Dreams</h1>
 <h6 id="goals-i-might-get-around-to-some-day">Goals I might get around to some day</h6>
