--- a/todo.html
+++ b/todo.html
@@ -47,9 +47,6 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul class="task-list">
-<li><label><input type="checkbox" />Read Ekte programmering</label></li>
-</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -58,6 +55,7 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" />Read Ekte programmering</label></li>
 <li><label><input type="checkbox" />Look into making assets for folder
 #intro-3d</label></li>
 <li><label><input type="checkbox" />Texture shroom
@@ -273,6 +271,7 @@ to some day</h6>
 <li>Make Lingua Quest</li>
 <li>Make Speed Cars</li>
 <li>Make Spring Man</li>
+<li>Make a tilt5 game</li>
 <li>Create Principia</li>
 <li>Write a dx11 renderer</li>
 <li>Write a vulkan renderer</li>
