Removed some old items, restructured list

--- a/todo.html
+++ b/todo.html
@@ -55,6 +55,14 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" />Do weekly mathematics 42
+#mathematics</label></li>
+<li><label><input type="checkbox" />Do weekly mathematics 43
+#mathematics</label></li>
+<li><label><input type="checkbox" />Do weekly mathematics 44
+#mathematics</label></li>
+<li><label><input type="checkbox" />Do weekly mathematics 45
+#mathematics</label></li>
 <li><label><input type="checkbox" />Read Ekte programmering</label></li>
 <li><label><input type="checkbox" />Look into making assets for folder
 #intro-3d</label></li>
@@ -77,16 +85,6 @@ remember what to do!</h6>
 <li><label><input type="checkbox" />Do closed book exam 2022
 #programming</label></li>
 <li><label><input type="checkbox" />Buy superglue</label></li>
-<li><label><input type="checkbox" checked="" />Go to art
-addicts</label></li>
-<li><label><input type="checkbox" />Do weekly mathematics 42
-#mathematics</label></li>
-<li><label><input type="checkbox" />Do weekly mathematics 43
-#mathematics</label></li>
-<li><label><input type="checkbox" />Do weekly mathematics 44
-#mathematics</label></li>
-<li><label><input type="checkbox" />Do weekly mathematics 45
-#mathematics</label></li>
 <li><label><input type="checkbox" />Read a book 20 minutes
 #recreation</label></li>
 <li><label><input type="checkbox" />Make carrot man as practice
@@ -166,8 +164,6 @@ actions. Waiting for the right time or on other people</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" />Review Getting Things Done in three
 months -&gt; january-2023</label></li>
-<li><label><input type="checkbox" />Make Butter Chicken on
-Sunday</label></li>
 </ul>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
@@ -193,7 +189,8 @@ Mathematics</label></li>
 1</label></li>
 <li><label><input type="checkbox" checked="" />Ulrik lesson
 2</label></li>
-<li><label><input type="checkbox" />Ulrik lesson 3</label></li>
+<li><label><input type="checkbox" checked="" />Ulrik lesson
+3</label></li>
 <li><label><input type="checkbox" />Ulrik lesson 4</label></li>
 <li><label><input type="checkbox" />Ulrik lesson 5</label></li>
 <li><label><input type="checkbox" />Write paper for mdpi</label></li>
